# messaging

./: .gitignore  CMakeLists.txt  README.md  shell.nix
c/include/: messages.h  packet.h
c/src/: packet.c
cpp/include/: messages.hpp  packet.hpp
cpp/src/: packet.cpp
examples/c/: CMakeLists.txt
examples/c/src/: main.c
examples/cpp/: CMakeLists.txt
examples/cpp/src/: main.cpp
examples/python/: main.py
generator/: gen.py  requirements.txt
spec/: SPEC.md  messages.yml
